# libmumble

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  GENERAL_REMARKS  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml  pr-checks.yml
cmake/: FindOpus.cmake  MumbleCompiler.cmake  compiler_utilities.cmake  setup_dependencies.cmake  wepoll_cmakelists.txt
examples/: CMakeLists.txt
examples/ExampleClient/: CMakeLists.txt  main.cpp
examples/ExampleServer/: CMakeLists.txt  Node.cpp  Node.hpp  User.cpp  User.hpp  UserManager.cpp  config.toml  main.cpp
include/boost/core/: span.hpp
include/mumble/: 1  Base64.hpp  Cert.hpp  Client.hpp  Connection.hpp  Crypt.hpp  CryptOCB2.hpp  Endian.hpp  Hash.hpp  IP.hpp  Key.hpp  Lib.hpp  Macros.hpp  Message.hpp  Mumble.hpp  NonCopyable.hpp  Opus.hpp  Pack.hpp  PacketDataStream.hpp  Peer.hpp  Server.hpp  Session.hpp  Types.hpp
src/: Base64.cpp  Base64.hpp  CMakeLists.txt  Cert.cpp  Cert.hpp  Client.cpp  Client.hpp  Connection.cpp  Connection.hpp  Crypt.cpp  Crypt.hpp  CryptOCB2.cpp  CryptOCB2.hpp  Endian.cpp  Hash.cpp  Hash.hpp  IP.cpp  IP.hpp  Key.cpp  Key.hpp  Lib.cpp  Monitor.cpp  Monitor.hpp  Mumble.cpp  MumbleTCP.proto  Opus.cpp  Opus.hpp  Pack.cpp  Pack.hpp  Peer.cpp  Peer.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  Socket.cpp  Socket.hpp  TCP.cpp  TCP.hpp  TLS.cpp  (+3 more)
src/example/: CMakeLists.txt  MumbleInit.cpp  MumbleInit.hpp
src/example/ExampleClient/: CMakeLists.txt  config.toml  main.cpp
src/example/ExampleServer/: CMakeLists.txt  Endpoints.hpp  Node.cpp  Node.hpp  User.cpp  User.hpp  UserManager.cpp  UserManager.hpp  main.cpp
src/proto/: CMakeLists.txt  MumbleTCP.proto  MumbleUDP.proto
src/test/: CMakeLists.txt  ThreadManager.cpp  ThreadManager.hpp
src/test/TestBase64/: CMakeLists.txt  Data.hpp  main.cpp
src/test/TestCrypt/: CMakeLists.txt  main.cpp
src/test/TestHash/: CMakeLists.txt  Data.hpp  main.cpp
src/test/TestOpus/: CMakeLists.txt  main.cpp
src/test/TestPacketDataStream/: TestPacketDataStream.cpp  TestPacketDataStream.hpp
tests/: Base64.cpp  CMakeLists.txt  Crypt.cpp  Hash.cpp  Opus.cpp  PacketDataStream.cpp  ThreadManager.cpp  ThreadManager.hpp
tests/TestBase64/: CMakeLists.txt  Data.hpp  main.cpp
tests/TestCrypt/: CMakeLists.txt  main.cpp
tests/TestHash/: CMakeLists.txt
tests/TestOpus/: CMakeLists.txt  main.cpp
tests/TestPacketDataStream/: CMakeLists.txt  main.cpp
